promising route transitions, need to resolve layout issues introduced by absolute positioning

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,13 @@
     max-width: 768px;
   }
 }
+
+/* Route transitions */
+.switch-wrapper {
+  position: relative;
+}
+
+.switch-wrapper > div {
+  position: absolute;
+  width: 100%;
+}
